github pages release

--- a/interfaces/catchclause.html
+++ b/interfaces/catchclause.html
@@ -157,7 +157,7 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="param" class="tsd-anchor"></a>
 					<h3>param</h3>
-					<div class="tsd-signature tsd-kind-icon">param<span class="tsd-signature-symbol">:</span> <a href="identifier.html" class="tsd-signature-type">Identifier</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
+					<div class="tsd-signature tsd-kind-icon">param<span class="tsd-signature-symbol">:</span> <a href="identifier.html" class="tsd-signature-type">Identifier</a><span class="tsd-signature-symbol"> | </span><a href="arraypattern.html" class="tsd-signature-type">ArrayPattern</a><span class="tsd-signature-symbol"> | </span><a href="objectpattern.html" class="tsd-signature-type">ObjectPattern</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in node_modules/@babel/types/lib/index.d.ts:102</li>
