--- a/interfaces/classdeclaration.html
+++ b/interfaces/classdeclaration.html
@@ -114,17 +114,17 @@
 					<div class="tsd-signature tsd-kind-icon">abstract<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:416</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:428</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="body" class="tsd-anchor"></a>
 					<h3>body</h3>
-					<div class="tsd-signature tsd-kind-icon">body<span class="tsd-signature-symbol">:</span> <a href="classbody.html" class="tsd-signature-type">ClassBody</a></div>
+					<div class="tsd-signature tsd-kind-icon">body<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:414</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:426</li>
 						</ul>
 					</aside>
 				</section>
@@ -134,17 +134,17 @@
 					<div class="tsd-signature tsd-kind-icon">declare<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:417</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:429</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="decorators" class="tsd-anchor"></a>
 					<h3>decorators</h3>
-					<div class="tsd-signature tsd-kind-icon">decorators<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><a href="decorator.html" class="tsd-signature-type">Decorator</a><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
+					<div class="tsd-signature tsd-kind-icon">decorators<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:415</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:427</li>
 						</ul>
 					</aside>
 				</section>
@@ -162,20 +162,20 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="id" class="tsd-anchor"></a>
 					<h3>id</h3>
-					<div class="tsd-signature tsd-kind-icon">id<span class="tsd-signature-symbol">:</span> <a href="identifier.html" class="tsd-signature-type">Identifier</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
+					<div class="tsd-signature tsd-kind-icon">id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:412</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:424</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="implements" class="tsd-anchor"></a>
 					<h3>implements</h3>
-					<div class="tsd-signature tsd-kind-icon">implements<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><a href="tsexpressionwithtypearguments.html" class="tsd-signature-type">TSExpressionWithTypeArguments</a><span class="tsd-signature-symbol"> | </span><a href="classimplements.html" class="tsd-signature-type">ClassImplements</a><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
+					<div class="tsd-signature tsd-kind-icon">implements<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:418</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:430</li>
 						</ul>
 					</aside>
 				</section>
@@ -215,10 +215,10 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="mixins" class="tsd-anchor"></a>
 					<h3>mixins</h3>
-					<div class="tsd-signature tsd-kind-icon">mixins<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
+					<div class="tsd-signature tsd-kind-icon">mixins<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:419</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:431</li>
 						</ul>
 					</aside>
 				</section>
@@ -236,20 +236,20 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="superclass" class="tsd-anchor"></a>
 					<h3>super<wbr>Class</h3>
-					<div class="tsd-signature tsd-kind-icon">super<wbr>Class<span class="tsd-signature-symbol">:</span> <a href="aliases.html#expression" class="tsd-signature-type">Expression</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
+					<div class="tsd-signature tsd-kind-icon">super<wbr>Class<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:413</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:425</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="supertypeparameters" class="tsd-anchor"></a>
 					<h3>super<wbr>Type<wbr>Parameters</h3>
-					<div class="tsd-signature tsd-kind-icon">super<wbr>Type<wbr>Parameters<span class="tsd-signature-symbol">:</span> <a href="typeparameterinstantiation.html" class="tsd-signature-type">TypeParameterInstantiation</a><span class="tsd-signature-symbol"> | </span><a href="tstypeparameterinstantiation.html" class="tsd-signature-type">TSTypeParameterInstantiation</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
+					<div class="tsd-signature tsd-kind-icon">super<wbr>Type<wbr>Parameters<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:420</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:432</li>
 						</ul>
 					</aside>
 				</section>
@@ -271,17 +271,17 @@
 					<aside class="tsd-sources">
 						<p>Overrides BaseNode.type</p>
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:411</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:423</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="typeparameters" class="tsd-anchor"></a>
 					<h3>type<wbr>Parameters</h3>
-					<div class="tsd-signature tsd-kind-icon">type<wbr>Parameters<span class="tsd-signature-symbol">:</span> <a href="typeparameterdeclaration.html" class="tsd-signature-type">TypeParameterDeclaration</a><span class="tsd-signature-symbol"> | </span><a href="tstypeparameterdeclaration.html" class="tsd-signature-type">TSTypeParameterDeclaration</a><span class="tsd-signature-symbol"> | </span><a href="noop.html" class="tsd-signature-type">Noop</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
+					<div class="tsd-signature tsd-kind-icon">type<wbr>Parameters<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:421</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:433</li>
 						</ul>
 					</aside>
 				</section>
