--- a/interfaces/enumbooleanmember.html
+++ b/interfaces/enumbooleanmember.html
@@ -124,7 +124,7 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="init" class="tsd-anchor"></a>
 					<h3>init</h3>
-					<div class="tsd-signature tsd-kind-icon">init<span class="tsd-signature-symbol">:</span> <a href="booleanliteral.html" class="tsd-signature-type">BooleanLiteral</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
+					<div class="tsd-signature tsd-kind-icon">init<span class="tsd-signature-symbol">:</span> <a href="booleanliteral.html" class="tsd-signature-type">BooleanLiteral</a></div>
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in node_modules/@babel/types/lib/index.d.ts:909</li>
