--- a/interfaces/enumnumberbody.html
+++ b/interfaces/enumnumberbody.html
@@ -114,7 +114,7 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="explicit" class="tsd-anchor"></a>
 					<h3>explicit</h3>
-					<div class="tsd-signature tsd-kind-icon">explicit<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
+					<div class="tsd-signature tsd-kind-icon">explicit<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in node_modules/@babel/types/lib/index.d.ts:892</li>
