--- a/interfaces/withstatement.html
+++ b/interfaces/withstatement.html
@@ -103,7 +103,7 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="body" class="tsd-anchor"></a>
 					<h3>body</h3>
-					<div class="tsd-signature tsd-kind-icon">body<span class="tsd-signature-symbol">:</span> <a href="blockstatement.html" class="tsd-signature-type">BlockStatement</a><span class="tsd-signature-symbol"> | </span><a href="aliases.html#statement" class="tsd-signature-type">Statement</a></div>
+					<div class="tsd-signature tsd-kind-icon">body<span class="tsd-signature-symbol">:</span> <a href="aliases.html#statement" class="tsd-signature-type">Statement</a></div>
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in node_modules/@babel/types/lib/index.d.ts:376</li>
