--- a/interfaces/classexpression.html
+++ b/interfaces/classexpression.html
@@ -112,7 +112,7 @@
 					<div class="tsd-signature tsd-kind-icon">body<span class="tsd-signature-symbol">:</span> <a href="classbody.html" class="tsd-signature-type">ClassBody</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:428</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:414</li>
 						</ul>
 					</aside>
 				</section>
@@ -122,7 +122,7 @@
 					<div class="tsd-signature tsd-kind-icon">decorators<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><a href="decorator.html" class="tsd-signature-type">Decorator</a><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:429</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:415</li>
 						</ul>
 					</aside>
 				</section>
@@ -143,7 +143,7 @@
 					<div class="tsd-signature tsd-kind-icon">id<span class="tsd-signature-symbol">:</span> <a href="identifier.html" class="tsd-signature-type">Identifier</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:426</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:412</li>
 						</ul>
 					</aside>
 				</section>
@@ -153,7 +153,7 @@
 					<div class="tsd-signature tsd-kind-icon">implements<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><a href="tsexpressionwithtypearguments.html" class="tsd-signature-type">TSExpressionWithTypeArguments</a><span class="tsd-signature-symbol"> | </span><a href="classimplements.html" class="tsd-signature-type">ClassImplements</a><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:430</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:416</li>
 						</ul>
 					</aside>
 				</section>
@@ -193,10 +193,10 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="mixins" class="tsd-anchor"></a>
 					<h3>mixins</h3>
-					<div class="tsd-signature tsd-kind-icon">mixins<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
+					<div class="tsd-signature tsd-kind-icon">mixins<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:431</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:417</li>
 						</ul>
 					</aside>
 				</section>
@@ -217,7 +217,7 @@
 					<div class="tsd-signature tsd-kind-icon">super<wbr>Class<span class="tsd-signature-symbol">:</span> <a href="aliases.html#expression" class="tsd-signature-type">Expression</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:427</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:413</li>
 						</ul>
 					</aside>
 				</section>
@@ -227,7 +227,7 @@
 					<div class="tsd-signature tsd-kind-icon">super<wbr>Type<wbr>Parameters<span class="tsd-signature-symbol">:</span> <a href="typeparameterinstantiation.html" class="tsd-signature-type">TypeParameterInstantiation</a><span class="tsd-signature-symbol"> | </span><a href="tstypeparameterinstantiation.html" class="tsd-signature-type">TSTypeParameterInstantiation</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:432</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:418</li>
 						</ul>
 					</aside>
 				</section>
@@ -249,7 +249,7 @@
 					<aside class="tsd-sources">
 						<p>Overrides BaseNode.type</p>
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:425</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:411</li>
 						</ul>
 					</aside>
 				</section>
@@ -259,7 +259,7 @@
 					<div class="tsd-signature tsd-kind-icon">type<wbr>Parameters<span class="tsd-signature-symbol">:</span> <a href="typeparameterdeclaration.html" class="tsd-signature-type">TypeParameterDeclaration</a><span class="tsd-signature-symbol"> | </span><a href="tstypeparameterdeclaration.html" class="tsd-signature-type">TSTypeParameterDeclaration</a><span class="tsd-signature-symbol"> | </span><a href="noop.html" class="tsd-signature-type">Noop</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in node_modules/@babel/types/lib/index.d.ts:433</li>
+							<li>Defined in node_modules/@babel/types/lib/index.d.ts:419</li>
 						</ul>
 					</aside>
 				</section>
