--- a/interfaces/dependencies.html
+++ b/interfaces/dependencies.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ObjectOfBazX101YId8 | @open-rpc/schema-utils-js</title>
+	<title>Dependencies | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="objectofbazx101yid8.html">ObjectOfBazX101YId8</a>
+					<a href="dependencies.html">Dependencies</a>
 				</li>
 			</ul>
-			<h1>Interface ObjectOfBazX101YId8</h1>
+			<h1>Interface Dependencies</h1>
 		</div>
 	</div>
 </header>
@@ -68,39 +68,13 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">ObjectOfBazX101YId8</span>
+						<span class="target">Dependencies</span>
 					</li>
 				</ul>
 			</section>
 			<section class="tsd-panel tsd-kind-interface">
 				<h3 class="tsd-before-signature">Indexable</h3>
-				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>k: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
-			</section>
-			<section class="tsd-panel-group tsd-index-group">
-				<h2>Index</h2>
-				<section class="tsd-panel tsd-index-panel">
-					<div class="tsd-index-content">
-						<section class="tsd-index-section ">
-							<h3>Properties</h3>
-							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="objectofbazx101yid8.html#ripslip" class="tsd-kind-icon">ripslip</a></li>
-							</ul>
-						</section>
-					</div>
-				</section>
-			</section>
-			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="ripslip" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> ripslip</h3>
-					<div class="tsd-signature tsd-kind-icon">ripslip<span class="tsd-signature-symbol">:</span> <a href="../globals.html#baz" class="tsd-signature-type">Baz</a></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/ef07286/src/integration-tests/results/ts/duplicate-names.ts#L4">src/integration-tests/results/ts/duplicate-names.ts:4</a></li>
-						</ul>
-					</aside>
-				</section>
+				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>key: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
 			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
@@ -116,12 +90,7 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface">
-						<a href="objectofbazx101yid8.html" class="tsd-kind-icon">Object<wbr>OfBaz<wbr>X101YId8</a>
-						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="objectofbazx101yid8.html#ripslip" class="tsd-kind-icon">ripslip</a>
-							</li>
-						</ul>
+						<a href="dependencies.html" class="tsd-kind-icon">Dependencies</a>
 					</li>
 				</ul>
 				<ul class="after-current">
