--- a/interfaces/trystatement.html
+++ b/interfaces/trystatement.html
@@ -104,7 +104,7 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="block" class="tsd-anchor"></a>
 					<h3>block</h3>
-					<div class="tsd-signature tsd-kind-icon">block<span class="tsd-signature-symbol">:</span> <a href="blockstatement.html" class="tsd-signature-type">BlockStatement</a></div>
+					<div class="tsd-signature tsd-kind-icon">block<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in node_modules/@babel/types/lib/index.d.ts:334</li>
