--- a/interfaces/tsimportequalsdeclaration.html
+++ b/interfaces/tsimportequalsdeclaration.html
@@ -136,7 +136,7 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
 					<a name="isexport" class="tsd-anchor"></a>
 					<h3>is<wbr>Export</h3>
-					<div class="tsd-signature tsd-kind-icon">is<wbr>Export<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
+					<div class="tsd-signature tsd-kind-icon">is<wbr>Export<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in node_modules/@babel/types/lib/index.d.ts:1473</li>
